--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.0-alpha1",
     "cra-template": "1.2.0",
+    "hammerjs": "^2.0.8",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^19.0.0",
